DEPLOY-YML/misc/deploy-mysql-primary.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mycas-mysql
  namespace: mycas
spec:
  serviceName: mysql
  replicas: 2
  selector:
    matchLabels:
      app: mycas-mysql
  template:
    metadata:
      labels:
        app: mycas-mysql
    spec:
      containers:
        - name: mycas-mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: config
              mountPath: /etc/mysql/conf.d
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: config
          emptyDir: {}  # Shared volume for config generation
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 512Mi
