DEPLOY-YML/misc/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8080
        command: ["/bin/sh", "-c"]
        args:
          - echo "Starting Nginx on port 8080" &&
            sed -i 's/listen 80;/listen 8080;/' /etc/nginx/conf.d/default.conf &&
            nginx -g 'daemon off;'
