DEPLOY-YML/misc/deploy-mysql-replica.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-replica
  namespace: mycas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mycas-mysql
      role: replica
  template:
    metadata:
      labels:
        app: mycas-mysql
        role: replica
    spec:
      containers:
        - name: mycas-mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-replica
  namespace: mycas
spec:
  selector:
    app: mycas-mysql
    role: replica
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
