DEPLOY-YML/misc/svc-webapp-externalip.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort  # Works with ClusterIP, NodePort, or LoadBalancer
  selector:
    app: mycas-webapp
  ports:
    - protocol: TCP
      port: 80       # Service Port
      targetPort: 8080  # Pod's Port
      nodePort: 31311  # NodePort (Fixed)
  externalIPs:
    - 192.168.222.232  # Secondary Node IP
