DEPLOY-YML/misc/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mycas-route
  namespace: mycas
spec:
  parentRefs:
  - name: mycas-gateway
    namespace: mycas
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: mycas-webapp
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: "/search"
    backendRefs:
    - name: mycas-webapp
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: "/find"
    backendRefs:
    - name: mycas-webapp2
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: "/status"
    backendRefs:
    - name: mycas-webapp2
      port: 80
